hphp/test/zend7/Zend/tests/closure_015.php.expectf
Error: Object of class Closure%s could not be converted to string at %sclosure_015.php(8)

Error: Object of class Closure%s could not be converted to string at %sclosure_015.php(10)